# anomaly-detection-in-cpp

./: .gitignore  CMakeLists.txt  README.md  estimate.cpp  header.hpp  main.cpp  parser.cpp
data/: Xval.csv
data/dataset2/: Xval.csv  yval.csv
include/: header.hpp
src/: anomaly.cpp  eigen.cpp  estimate.cpp  main.cpp  parser.cpp  print.cpp  proba.cpp  threshold.cpp
